[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "golynx"
version = "0.1.0"
description = "pep"
dependencies = [
    "starlette",
    "uvicorn",
    "uvicorn[standard]"
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.isort]
profile = "black"

[tool.setuptools.package-dir]
golynx = "./golynx"
