[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "golynx"
version = "0.1.0"
description = "pep"
dependencies = [
    "starlette",
    "uvicorn",
    "uvicorn[standard]"
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-mock>=3.14.0",
]
supabase = [
    "supabase>=2.12.0",
]

[tool.isort]
profile = "black"


[tool.setuptools.package-dir]
golynx = "./golynx"

[tool.pdm.scripts]
start = "uvicorn golynx.main:app --host 0.0.0.0 --port 8080"
test = "pytest"

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "vulture>=2.14",
]
